# tcc-pos-puc

./: .gitignore  README.md  TCC_Jose_Nunes_Rodrigues_de_Assis.doc  apresentacao_projeto_arquitetural_TCC-1.pptx  arquitetura-inicial.xml  package-lock.json  package.json  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  setup.sh
airflow/: README.md  docker-compose.yaml
airflow/dags/: basic_dag.py  fluxo_clientes.py  fluxo_entregas.py  fluxo_pedidos.py
db_cli/: README.md  cli.py  clientes.py  config.py  utils.py
db_cli/comandos/: clientes.py  entregas.py  pedidos.py
druid/: README.md  docker-compose.yaml  environment
images/: arquitetura-inicial.xml  arquitetura-proposta.xml  arquitetura-tcc.xml  diagrama-de-componentes.xml
kafka/: README.md  connect-sink.json  connect-source.json  docker-compose.yaml  kc-jdbc-source.json
kafka/cli/: cli.py  constantes.py  entregas.py  pedidos.py
kafka/initdb.d/: init.sql
