[tool.poetry]
name = "tcc-pos-puc"
version = "0.1.0"
description = ""
authors = ["José Nunes <josenunesra@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
apache-airflow = "^2.3.3"
confluent-kafka = "^1.9.0"
Faker = "^13.15.1"
prettytable = "^3.3.0"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
