[tool.poetry]
name = "tcc-pos-puc"
version = "0.1.0"
description = ""
authors = ["José Nunes <josenunesra@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
apache-airflow = "^2.6.3"
confluent-kafka = "^2.2.0"
faker = "^19.1.0"
prettytable = "^3.8.0"
psycopg2-binary = "^2.9.6"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
