[tool.poetry]
name = "tcc-pos-puc"
version = "0.1.0"
description = ""
authors = ["José Nunes <josenunesra@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
apache-airflow = "^2.7.3"
confluent-kafka = "^2.3.0"
faker = "^20.1.0"
prettytable = "^3.9.0"
psycopg2-binary = "^2.9.9"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
